--- a/FilezillaLog/Views/Shared/_Layout.cshtml
+++ b/FilezillaLog/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    <base href='@Url.Content("~/")' />
+    <base href='@ViewBag.baseUrl' />
 
 </head>
 <body>
@@ -20,13 +20,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", null, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -43,6 +40,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/angular")
+    @Scripts.Render("~/bundles/ui-bootstrap")
     @Scripts.Render("~/bundles/app")
     @Scripts.Render("~/bundles/controllers")
     @Scripts.Render("~/bundles/services")
