--- a/FilezillaLog/Content/Site.css
+++ b/FilezillaLog/Content/Site.css
@@ -9,12 +9,6 @@
     padding-right: 15px;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
-}
 
 /* styles for validation helpers */
 .field-validation-error {
@@ -39,4 +33,10 @@ input[type="checkbox"].input-validation-error {
 
 .validation-summary-valid {
     display: none;
+}
+
+/*Utility Classes*/
+
+.width-95 {
+    width: 95px;
 }
