--- a/FilezillaLog/Views/Home/Index.cshtml
+++ b/FilezillaLog/Views/Home/Index.cshtml
@@ -1,7 +1,3 @@
-﻿@{
-    ViewBag.Title = "Filezilla Log Entries";
-}
-<h2>@ViewBag.Title</h2>
-<h3>@ViewBag.Message</h3>
+﻿<h2>Filezilla Log Entries</h2>
 
 <div data-ng-view=""></div>
